[gd_scene load_steps=29 format=3 uid="uid://dnfwmu05ax2vb"]

[ext_resource type="PackedScene" uid="uid://4ll2hc81b066" path="res://entities/enemy/enemy.tscn" id="1_r6fw5"]
[ext_resource type="Script" uid="uid://by44oryhxve57" path="res://entities/npc.gd" id="2_5300l"]
[ext_resource type="Script" uid="uid://2clx8t1aup3n" path="res://entities/character_stats.gd" id="3_msrsq"]
[ext_resource type="BehaviorTree" uid="uid://cg2xvua4lo6hn" path="res://entities/enemy/slime enemy/slime_ai.tres" id="4_5300l"]
[ext_resource type="Script" uid="uid://djq3eset4y6pk" path="res://entities/player/facing.gd" id="4_w244n"]
[ext_resource type="Texture2D" uid="uid://d2vq74edipi66" path="res://Aseprite Assets/greenslime/slime-Sheet.png" id="5_r863y"]
[ext_resource type="Script" uid="uid://cwpoefserqo5b" path="res://entities/enemy/slime enemy/detection_zone.gd" id="6_r863y"]
[ext_resource type="Script" uid="uid://csyljcxrlua5e" path="res://entities/attack_area_2d.gd" id="7_ead0r"]
[ext_resource type="Script" uid="uid://b8fqt8af86l80" path="res://addons/item_drops/drops/random_drops.gd" id="9_6y3xp"]
[ext_resource type="Script" uid="uid://cqmxiok1cwu5s" path="res://addons/item_drops/drops/drops_table.gd" id="10_80y73"]
[ext_resource type="Script" uid="uid://cttuwmb0e0k2k" path="res://addons/item_drops/scene_spawner/2d/launch_force_scene_spawner_2d.gd" id="11_6y3xp"]
[ext_resource type="Script" uid="uid://daksr3jumc0af" path="res://addons/item_drops/drops/droppable.gd" id="11_immwr"]
[ext_resource type="Script" uid="uid://gm1tcxr1506r" path="res://addons/item_drops/settings/spawn_group.gd" id="12_80y73"]

[sub_resource type="Resource" id="Resource_e8v7t"]
script = ExtResource("3_msrsq")
run_speed = 50.0
acceleration = 1200
friction = 1800
jump_velocity = 275.0
health = 1
metadata/_custom_type_script = ExtResource("3_msrsq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w244n"]
size = Vector2(223.75, 111.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_ead0r"]
radius = 12.5

[sub_resource type="Animation" id="Animation_nta3p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_r863y"]
resource_name = "attack"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"lock_animation"
}, {
"args": [],
"method": &"unlock_animation"
}]
}

[sub_resource type="Animation" id="Animation_wo1r7"]
resource_name = "damaged"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../RandomDrops")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0, 1.0],
"method": &"spawn_drops"
}]
}

[sub_resource type="Animation" id="Animation_vd0wj"]
resource_name = "idle"
length = 0.36
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_5300l"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f7x3h"]
_data = {
&"RESET": SubResource("Animation_nta3p"),
&"attack": SubResource("Animation_r863y"),
&"damaged": SubResource("Animation_wo1r7"),
&"idle": SubResource("Animation_vd0wj"),
&"run": SubResource("Animation_5300l")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tdkep"]
radius = 13.75

[sub_resource type="CircleShape2D" id="CircleShape2D_3mhv0"]
radius = 13.75

[sub_resource type="BlackboardPlan" id="BlackboardPlan_cln1x"]

[sub_resource type="Resource" id="Resource_b4rwy"]
script = ExtResource("11_immwr")
drop_path = "uid://dq71bxtc5enin"
odds = 1.0
metadata/_custom_type_script = ExtResource("11_immwr")

[sub_resource type="Resource" id="Resource_eoit1"]
script = ExtResource("10_80y73")
possible_drops = Array[ExtResource("11_immwr")]([SubResource("Resource_b4rwy")])
guaranteed_drops = 1
combined_odds = false
metadata/_custom_type_script = ExtResource("10_80y73")

[sub_resource type="Resource" id="Resource_immwr"]
script = ExtResource("12_80y73")
name = &"spawned_parent"
metadata/_custom_type_script = ExtResource("12_80y73")

[node name="SlimeEnemy" node_paths=PackedStringArray("navigation", "bt_player", "animation_player", "sprite_2d") instance=ExtResource("1_r6fw5")]
scale = Vector2(0.8, 0.8)
collision_layer = 32
collision_mask = 260
script = ExtResource("2_5300l")
navigation = NodePath("NavigationAgent2D")
bt_player = NodePath("BTPlayer")
animation_player = NodePath("AnimationPlayer")
sprite_2d = NodePath("Facing/Sprite2D")
stats = SubResource("Resource_e8v7t")

[node name="Facing" type="Node2D" parent="." index="0" node_paths=PackedStringArray("bt_player")]
script = ExtResource("4_w244n")
bt_player = NodePath("../BTPlayer")
metadata/_custom_type_script = ExtResource("4_w244n")

[node name="Sprite2D" type="Sprite2D" parent="Facing" index="0"]
rotation = 3.14159
scale = Vector2(1.3, -1.3)
texture = ExtResource("5_r863y")
hframes = 6
vframes = 4

[node name="DetectionZone" type="Area2D" parent="Facing" index="1" node_paths=PackedStringArray("bt_player")]
visible = false
script = ExtResource("6_r863y")
bt_player = NodePath("../../BTPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Facing/DetectionZone" index="0"]
position = Vector2(61.875, -0.625002)
shape = SubResource("RectangleShape2D_w244n")

[node name="AttackArea2D" type="Area2D" parent="Facing" index="2"]
collision_layer = 0
script = ExtResource("7_ead0r")
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Facing/AttackArea2D" index="0"]
shape = SubResource("CircleShape2D_ead0r")
debug_color = Color(0.876848, 0.287645, 0.484216, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
root_node = NodePath("../Facing/Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_f7x3h")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
shape = SubResource("CircleShape2D_tdkep")

[node name="hitbox" parent="." index="3"]
collision_layer = 32
collision_mask = 5

[node name="hitbox_collider" parent="hitbox" index="0"]
shape = SubResource("CircleShape2D_3mhv0")
debug_color = Color(0.877846, 0.291741, 0.463077, 0.42)

[node name="Stats" type="Node" parent="." index="4"]

[node name="Timers" type="Node" parent="." index="5"]

[node name="InvulnerabilityTimer" type="Timer" parent="Timers" index="0"]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="6"]

[node name="BTPlayer" type="BTPlayer" parent="." index="7"]
behavior_tree = ExtResource("4_5300l")
blackboard_plan = SubResource("BlackboardPlan_cln1x")

[node name="RandomDrops" type="Node" parent="." index="8" node_paths=PackedStringArray("scene_spawner")]
script = ExtResource("9_6y3xp")
drops_table = SubResource("Resource_eoit1")
scene_spawner = NodePath("../LaunchForceSceneSpawner2D")
metadata/_custom_type_script = ExtResource("9_6y3xp")

[node name="LaunchForceSceneSpawner2D" type="Node2D" parent="." index="9"]
position = Vector2(-1.25, -6.25)
script = ExtResource("11_6y3xp")
spawn_group = SubResource("Resource_immwr")
metadata/_custom_type_script = ExtResource("11_6y3xp")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
